force-app/main/default/objects/VRS__c/VRS__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Validation Rule setting</label>
</CustomObject>