force-app/main/default/objects/VRS__c/fields/Application_Date_rule__c.field-meta.xml
<CustomField>
    <fullName>Application_Date_rule__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Custom setting Validation error: Application Date cannot be changed</description>
    <label>Application Date rule</label>
    <type>Checkbox</type>
</CustomField>