force-app/main/default/objects/VRS__c/fields/Expiry_date_rule__c.field-meta.xml
<CustomField>
    <fullName>Expiry_date_rule__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Custom setting: You cannot apply to this job after expiry date</description>
    <label>Expiry date rule</label>
    <type>Checkbox</type>
</CustomField>