force-app/main/default/objects/VRS__c/fields/JobIsNotActive__c.field-meta.xml
<CustomField>
    <fullName>JobIsNotActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>JobIsNotActive</label>
    <type>Checkbox</type>
</CustomField>