force-app/main/default/objects/VRS__c/fields/Salary_rule__c.field-meta.xml
<CustomField>
    <fullName>Salary_rule__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Custom setting Validation error: Expected Salary field is missing</description>
    <label>Salary rule</label>
    <type>Checkbox</type>
</CustomField>